# shuttle-axum

./: .env  Cargo.toml  Secrets.toml.example  Shuttle.toml
.github/workflows/: shuttle.yml
api/lib/: Cargo.toml  dev.yaml
api/lib/src/: error.rs  lib.rs
api/lib/tests/: health.rs
api/lib/tests/server/: error.rs  health.rs  helpers.rs  main.rs  version.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
migrations/: 20240430012619_create_films_table.sql  20240527124534_create_example_table.sql
scripts/: db.sh
