[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
config = "0.13.3"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.7", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
derive_more = { version = "0.99.17", features = ["from"] }

[dev-dependencies]
tokio = "1.28.2"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
dotenvy = "0.15"
